--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <h1>Initial Mlambo</h1>
     <p>My name is Initial Mlambo.</p>
-    <a href="file:///Users/Shared/MLAMBO/CONTACT%20ME.html">Contact Me</a>
-    <a href="file:///Users/Shared/MLAMBO/MY%20Hobbies.html">HOBBIES</a>
-    <a href="file:///Users/Shared/MLAMBO/CSS/indexof2022.html">FAVOURITE FOODS</a>
+    <a href="file:///Users/Shared/MLAMBO/contact-me.html">Contact Me</a>
+    <a href="file:///Users/Shared/MLAMBO/hobbies.html">hobbies</a>
 
 <style>
 table {
