--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <h1>Initial Mlambo</h1>
     <p>My name is Initial Mlambo.</p>
-    <a href="file:///Users/Shared/MLAMBO/contact-me.html">Contact Me</a>
-    <a href="file:///Users/Shared/MLAMBO/hobbies.html">hobbies</a>
+    <a href="contact.html">Contact Me</a>
+    <a href="my hobbies.html">hobbies</a>
 
 <style>
 table {
