--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <h1>Initial Mlambo</h1>
     <p>My name is Initial Mlambo.</p>
     <a href="contact.html">Contact</a>
-    <a href="file:///Users/initial.mlambo/Documents/my%20hobbies.html">My hobbies</a>
+    <a href="myhobbies.html">My hobbies</a>
 
 <style>
 table {
