--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <h1>Initial Mlambo</h1>
     <p>My name is Initial Mlambo.</p>
     <a href="contact.html">Contact</a>
-    <a href="index2.html">My hobbies</a>
+    <a href="index2.html">My hobbies</a> 
+    <a href="index3.html">Initial Mlambo</a>
 
 <style>
 table {
